--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
 
       # 2. Cosign aracını kur
       - name: Install Cosign
-        uses: sigstore/cosign-installer@v3.1.1
+        uses: sigstore/cosign-installer@v3.5.0
+        with:
+          cosign-release: 'v2.4.0' # Versiyonu en güncel sürüme sabitliyoruz
 
       # 3. Docker Buildx kur (Build işlemleri için)
       - name: Set up Docker Buildx
